Adding exception handling

--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,7 @@ spring.datasource.password=zhonglaiAD-1
 #this configuration you need to provide your password which is represented by your user in order to connect through jdbc to your mysql database.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+server.error.include-message=always
+#springboot throws default error response object,
+#when something not found, but when we enable this.
+#we can throw our own message
