--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['-parameters']
+}
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-gradle-plugin
