--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.12'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     implementation 'mysql:mysql-connector-java:8.0.33'
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation 'org.mockito:mockito-core:5.10.0'
+    testImplementation 'org.springframework.boot:spring-boot-test:3.2.12'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-all
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+
+
+
 
 
 
