Adding log file

--- a/application.properties
+++ b/application.properties
@@ -14,3 +14,6 @@ server.error.include-message=always
 #springboot throws default error response object,
 #when something not found, but when we enable this.
 #we can throw our own message
+
+logging.file.name=mylog.log
+#logs will be saved in this file
